tests/baselines/reference/booleanAssignment.errors.txt
booleanAssignment.ts(2,1): error TS2322: Type 'number' is not assignable to type 'Boolean'.
booleanAssignment.ts(3,1): error TS2322: Type 'string' is not assignable to type 'Boolean'.
booleanAssignment.ts(4,1): error TS2322: Type '{}' is not assignable to type 'Boolean'.
  The types returned by 'valueOf()' are incompatible between these types.
    Type 'Object' is not assignable to type 'boolean'.


==== booleanAssignment.ts (3 errors) ====
    var b = new Boolean();
    b = 1; // Error
    ~
!!! error TS2322: Type 'number' is not assignable to type 'Boolean'.
    b = "a"; // Error
    ~
!!! error TS2322: Type 'string' is not assignable to type 'Boolean'.
    b = {}; // Error
    ~
!!! error TS2322: Type '{}' is not assignable to type 'Boolean'.
!!! error TS2322:   The types returned by 'valueOf()' are incompatible between these types.
!!! error TS2322:     Type 'Object' is not assignable to type 'boolean'.
    
    var o = {};
    o = b; // OK
    
    b = true; // OK
    
    var b2:boolean;
    b = b2; // OK